--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tabler/icons-react": "^3.35.0",
+    "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "face-api.js": "^0.22.2",
@@ -19,6 +20,8 @@
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
+    "openai": "^6.8.0",
+    "pg": "^8.16.3",
     "postprocessing": "^6.37.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
